@startuml
'https://plantuml.com/class-diagram
Robot <-- Main
Registrer <-- Main
Registrer --> Inventory
Registrer --> Basket
Basket *-- BasketEntry
Inventory *-- InventoryItem
BasketEntry --> InventoryItem


class Main
{
- main()
}

class Robot
{
}

class InventoryItem
{
 - String name
 - double regularPrice
 - double salePrice
 - boolean isOnSale
 + String getName()
 + double getRegularPrice()
 + double getSalePrice()
 + boolean isOnSale()
 + double getPriceToUse()
}

class Registrer
{
- Map<String, BasketEntry> entries
+ void scanBasket()
+ double calculateTotals()
+ void printReceipt()
}

class Inventory
{
- Collection<InventoryItem> allItems
+ void loadInventory()
+ void loadRegularItem()
+ void loadSaleItem()
}

class Basket
{
- Map<String, BasketEntry> entries
+ void getItem()
+ Collection<BasketEntry> getEntries()
}

class BasketEntry
{
- InventoryItem item
- int quantity
+ InventoryItem getItem()
+ int getQuantity()
+ void increaseQuantity(int amount)
+ double getPriceToUse()
+ double getTotalSaved()
}
@enduml